# wavelet-matrix

./: .gitignore  Cargo.toml  LICENSE  Makefile
benches/: bitvector_benchmark.rs
bit-structures/: .gitignore  Cargo.toml  Makefile  README.md  bit-structures.sublime-project
bit-structures/benches/: binary_search_benchmark.rs
bit-structures/src/: README.md  _main.rs  _wavelet_matrix.rs  bincode_helpers.rs  bit_block.rs  bit_buf.rs  bit_buffer.rs  bit_vec.rs  bit_vector.rs  bitvector.rs  compressed_bit_vec.rs  compressed_bit_vector.rs  dense_bit_vec.rs  dense_bit_vector.rs  dense_bitvector.rs  dense_multi_bit_vec.rs  fixed_width_intvector.rs  histogram.rs  int_vec.rs  int_vector.rs  lib.rs  main.rs  morton.rs  naive_bit_vec.rs  naive_bit_vector.rs  nonempty_extent.rs  raw_bit_vector.rs  raw_bitvector.rs  rle_bit_vec.rs  slice_bit_vec.rs  sparse_bit_vec.rs  sparse_bit_vector.rs  sparse_bitvector.rs  utils.rs  very_commented_dense_bitvector.rs  wasm_dense_bit_vec_32.rs  wasm_histogram32.rs  wasm_slice_bit_vec.rs  wasm_sparse_bit_vec_32.rs  wasm_sparse_bit_vec_64.rs  (+3 more)
src/: bitvector.rs  lib.rs  main.rs  originalrlebitvector.rs  rlebitvector.rs  simplebitvector.rs  sparsebitvector.rs  utils.rs  waveletmatrix.rs
