[package]
name = "wavelet-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
rand = "0.8.5"
simple-sds = { git = "https://github.com/jltsiren/simple-sds/", rev = "85f36bf863ddd980003127c65923b660895793a4" }

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "bitvector_benchmark"
harness = false
